// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Review Summary View renders approved correctly 1`] = `
.c0 {
  text-align: center;
  margin-bottom: 1rem;
}

.c1 {
  padding-top: 1rem;
  padding-bottom: 1rem;
  font-family: 'BCSans',Fallback,sans-serif;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

<div
  className="ProjectSummaryView container-fluid"
>
  <div
    className="c0 [object Object]-status"
  >
    <h5
      className="c1"
    >
      Approved for Surplus Property Program
    </h5>
    <svg
      fill="currentColor"
      height={64}
      size={64}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": "#20a74d",
        }
      }
      viewBox="0 0 512 512"
      width={64}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 48c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m140.204 130.267l-22.536-22.718c-4.667-4.705-12.265-4.736-16.97-.068L215.346 303.697l-59.792-60.277c-4.667-4.705-12.265-4.736-16.97-.069l-22.719 22.536c-4.705 4.667-4.736 12.265-.068 16.971l90.781 91.516c4.667 4.705 12.265 4.736 16.97.068l172.589-171.204c4.704-4.668 4.734-12.266.067-16.971z"
      />
    </svg>
    <h5
      className="c1"
    >
      Approval Date: Unknown Date
    </h5>
  </div>
  <form
    className=""
  >
    <div
      className="ProjectDraftForm container-fluid"
    >
      <div
        className="form-row"
      >
        <h3
          className="col-md-8"
        >
          Review
        </h3>
        <span
          className="col-md-4"
        />
      </div>
      <div
        className="col-md-10 form-row"
      >
        <label
          className="col-md-2 form-label"
        >
          Project No.
        </label>
        <div
          className="col-md-2 form-group"
        >
          <input
            className="form-control"
            disabled={true}
            id="input-projectNumber"
            name="projectNumber"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="SPP-XXXXXX"
            value="test-01"
          />
        </div>
      </div>
      <div
        className="form-row"
      >
        <div
          className="required col-md-10 form-group"
        >
          <label
            className="form-label"
            htmlFor="input-name"
          >
            Name
            <span
              className="required"
            >
              *
            </span>
          </label>
          <input
            className="col-md-5 form-control"
            disabled={true}
            id="input-name"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            required={true}
            value="my project"
          />
        </div>
      </div>
      <div
        className="form-row"
      >
        <div
          className="col-md-10 form-group"
        >
          <label
            className="form-label"
            htmlFor="input-description"
          >
            Description
          </label>
          <textarea
            className="col-md-5 form-control"
            disabled={true}
            id="input-description"
            name="description"
            onBlur={[Function]}
            onChange={[Function]}
            value="my project description"
          />
        </div>
      </div>
    </div>
    <div
      className="UpdateInfoForm container-fluid"
    >
      <div
        className="form-row"
      >
        <label
          className="form-label col-form-label col-md-2"
        >
          Assign Tier 
          <span
            className="required"
          >
            *
          </span>
          <svg
            className="tooltip-icon"
            fill="currentColor"
            height={14}
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            size={14}
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 512 512"
            width={14}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
            />
          </svg>
        </label>
        <div
          className="col-md-2 form-group"
        >
          <select
            className="form-select form-control"
            disabled={true}
            id="input-tierLevelId"
            name="tierLevelId"
            onBlur={[Function]}
            onChange={[Function]}
            value={1}
          >
            <option
              value=""
            >
              Must Select One
            </option>
          </select>
        </div>
      </div>
      <div
        className="form-row"
        style={
          Object {
            "alignItems": "unset",
          }
        }
      >
        <h3
          className="col-md-8"
        >
          Project Totals
        </h3>
      </div>
      <div
        className="row"
      >
        <div
          className="col-md-4"
        >
          <div
            className="row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Net Book Value 
              <span
                className="required"
              >
                *
              </span>
            </label>
            <div
              className="fast-currency-input form-group"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control"
                  name="netBook"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="$0"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            className="row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Estimated Market Value 
              <span
                className="required"
              >
                *
              </span>
            </label>
            <div
              className="fast-currency-input form-group"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control"
                  name="estimated"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="$0"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-4"
        >
          <div
            className="row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Assessed Value 
              <span
                className="required"
              >
                *
              </span>
            </label>
            <div
              className="fast-currency-input form-group"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control"
                  name="assessed"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="$0"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            className="row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Appraised Value
            </label>
            <div
              className="fast-currency-input form-group"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control"
                  name="appraised"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="$0"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="form-row"
      >
        <h6
          className="col-md-12"
          style={
            Object {
              "margin": "1rem 0",
            }
          }
        >
          Please make any necessary updates to the valuation information and the classification
        </h6>
        <h2
          className="col-md-5"
        >
          Properties in the Project
        </h2>
      </div>
      <div
        className="container-fluid"
      >
        <div
          className="ScrollContainer"
        >
          <div
            className="table"
            role="table"
            style={
              Object {
                "minWidth": undefined,
              }
            }
          >
            <div
              className="thead thead-light"
            >
              <div
                className="tr"
                role="row"
                style={
                  Object {
                    "display": "flex",
                    "flex": "1 0 auto",
                    "minWidth": "675px",
                  }
                }
              >
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  Agency
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  Sub Agency
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  Property Name
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  Civic Address
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "140 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "140px",
                    }
                  }
                >
                  Classification
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  Current Zoning Code
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  Potential Zoning Code
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "145 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "145px",
                      "textAlign": "left",
                      "width": "145px",
                    }
                  }
                >
                  Netbook Value
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "145 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "145px",
                      "textAlign": "left",
                      "width": "145px",
                    }
                  }
                >
                  Estimated Value
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "145 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "145px",
                      "textAlign": "left",
                      "width": "145px",
                    }
                  }
                >
                  Assessed Value
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "60 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "60px",
                    }
                  }
                >
                  Type
                </div>
              </div>
            </div>
            <div
              className="no-rows-message"
            >
              No rows to display
            </div>
          </div>
          <div
            className="table-toolbar"
          />
        </div>
      </div>
    </div>
    <h3>
      Documentation
    </h3>
    <h3>
      Approval
    </h3>
    <div
      className="form-row"
    >
      <div
        className="required form-group"
      >
        <div
          className="check-field"
        >
          <div
            className="form-check"
          >
            <input
              checked={true}
              className="form-check-input position-static"
              disabled={true}
              id="input-confirmation"
              name="confirmation"
              onChange={[Function]}
              required={true}
              type="checkbox"
              value={true}
            />
          </div>
          <span
            className="required"
          >
            *
          </span>
          <label
            className="form-label"
            htmlFor="input-confirmation"
          >
            I, Pims User, confirm by checking this box that I have received the approval 
  to request the property be submitted to the Enhanced Referral Program and marketed internally to other Ministry 
  and Broader Public Sector Agencies for 90 days before listing the property to be sold on the public commercial real estate market
          </label>
        </div>
      </div>
    </div>
    <h3>
      Enhanced Referral Process Exemption
      <svg
        className="tooltip-icon"
        fill="currentColor"
        height={14}
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        size={14}
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 512 512"
        width={14}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
        />
      </svg>
    </h3>
    <div
      className="ProjectExemptionRequestCheck form-row"
    >
      <div
        className="form-group"
      >
        <div
          className="check-field"
        >
          <div
            className="form-check"
          >
            <input
              checked={false}
              className="form-check-input position-static"
              disabled={true}
              id="input-exemptionRequested"
              name="exemptionRequested"
              onChange={[Function]}
              type="checkbox"
              value={false}
            />
          </div>
          <label
            className="form-label"
            htmlFor="input-exemptionRequested"
          >
            Apply for Enhanced Referral Process exemption
          </label>
        </div>
      </div>
    </div>
    <div
      className="ProjectNotes form-row"
    >
      <div
        className="col-md-10 form-group"
      >
        <label
          className="form-label"
          htmlFor="input-note"
        >
          Notes
        </label>
        <textarea
          className="col-md-5 form-control"
          disabled={true}
          id="input-note"
          name="note"
          onBlur={[Function]}
          onChange={[Function]}
          value="my notes"
        />
      </div>
    </div>
    <div
      className="ProjectNotes form-row"
    >
      <div
        className="col-md-10 form-group"
      >
        <label
          className="form-label"
          htmlFor="input-publicNote"
        >
          Shared Notes
          <svg
            className="tooltip-icon"
            fill="currentColor"
            height={14}
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            size={14}
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 512 512"
            width={14}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
            />
          </svg>
        </label>
        <textarea
          className="col-md-5 form-control"
          disabled={true}
          id="input-publicNote"
          name="publicNote"
          onBlur={[Function]}
          onChange={[Function]}
          value=""
        />
      </div>
    </div>
    <div
      style={
        Object {
          "textAlign": "right",
        }
      }
    />
    <div
      className="c2"
    >
      <button
        className="btn btn-warning"
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "marginLeft": 10,
          }
        }
        type="button"
      >
        Submit
      </button>
      <button
        className="btn btn-secondary"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        Save
      </button>
    </div>
  </form>
</div>
`;

exports[`Review Summary View renders denied correctly 1`] = `
.c0 {
  text-align: center;
  margin-bottom: 1rem;
}

.c1 {
  padding-top: 1rem;
  padding-bottom: 1rem;
  font-family: 'BCSans',Fallback,sans-serif;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

<div
  className="ProjectSummaryView container-fluid"
>
  <div
    className="c0 [object Object]-status"
  >
    <h5
      className="c1"
    >
      Submitted
    </h5>
    <svg
      fill="currentColor"
      height={64}
      size={64}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": "#d8292f",
        }
      }
      viewBox="0 0 24 24"
      width={64}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 11v2h10v-2H7zm5-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
      />
    </svg>
    <h5
      className="c1"
    >
      test
    </h5>
  </div>
  <form
    className=""
  >
    <div
      className="ProjectDraftForm container-fluid"
    >
      <div
        className="form-row"
      >
        <h3
          className="col-md-8"
        >
          Review
        </h3>
        <span
          className="col-md-4"
        />
      </div>
      <div
        className="col-md-10 form-row"
      >
        <label
          className="col-md-2 form-label"
        >
          Project No.
        </label>
        <div
          className="col-md-2 form-group"
        >
          <input
            className="form-control"
            disabled={true}
            id="input-projectNumber"
            name="projectNumber"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="SPP-XXXXXX"
            value="test-01"
          />
        </div>
      </div>
      <div
        className="form-row"
      >
        <div
          className="required col-md-10 form-group"
        >
          <label
            className="form-label"
            htmlFor="input-name"
          >
            Name
            <span
              className="required"
            >
              *
            </span>
          </label>
          <input
            className="col-md-5 form-control"
            disabled={true}
            id="input-name"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            required={true}
            value="my project"
          />
        </div>
      </div>
      <div
        className="form-row"
      >
        <div
          className="col-md-10 form-group"
        >
          <label
            className="form-label"
            htmlFor="input-description"
          >
            Description
          </label>
          <textarea
            className="col-md-5 form-control"
            disabled={true}
            id="input-description"
            name="description"
            onBlur={[Function]}
            onChange={[Function]}
            value="my project description"
          />
        </div>
      </div>
    </div>
    <div
      className="UpdateInfoForm container-fluid"
    >
      <div
        className="form-row"
      >
        <label
          className="form-label col-form-label col-md-2"
        >
          Assign Tier 
          <span
            className="required"
          >
            *
          </span>
          <svg
            className="tooltip-icon"
            fill="currentColor"
            height={14}
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            size={14}
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 512 512"
            width={14}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
            />
          </svg>
        </label>
        <div
          className="col-md-2 form-group"
        >
          <select
            className="form-select form-control"
            disabled={true}
            id="input-tierLevelId"
            name="tierLevelId"
            onBlur={[Function]}
            onChange={[Function]}
            value={1}
          >
            <option
              value=""
            >
              Must Select One
            </option>
          </select>
        </div>
      </div>
      <div
        className="form-row"
        style={
          Object {
            "alignItems": "unset",
          }
        }
      >
        <h3
          className="col-md-8"
        >
          Project Totals
        </h3>
      </div>
      <div
        className="row"
      >
        <div
          className="col-md-4"
        >
          <div
            className="row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Net Book Value 
              <span
                className="required"
              >
                *
              </span>
            </label>
            <div
              className="fast-currency-input form-group"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control"
                  name="netBook"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="$0"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            className="row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Estimated Market Value 
              <span
                className="required"
              >
                *
              </span>
            </label>
            <div
              className="fast-currency-input form-group"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control"
                  name="estimated"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="$0"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-4"
        >
          <div
            className="row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Assessed Value 
              <span
                className="required"
              >
                *
              </span>
            </label>
            <div
              className="fast-currency-input form-group"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control"
                  name="assessed"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="$0"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            className="row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Appraised Value
            </label>
            <div
              className="fast-currency-input form-group"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control"
                  name="appraised"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="$0"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="form-row"
      >
        <h6
          className="col-md-12"
          style={
            Object {
              "margin": "1rem 0",
            }
          }
        >
          Please make any necessary updates to the valuation information and the classification
        </h6>
        <h2
          className="col-md-5"
        >
          Properties in the Project
        </h2>
      </div>
      <div
        className="container-fluid"
      >
        <div
          className="ScrollContainer"
        >
          <div
            className="table"
            role="table"
            style={
              Object {
                "minWidth": undefined,
              }
            }
          >
            <div
              className="thead thead-light"
            >
              <div
                className="tr"
                role="row"
                style={
                  Object {
                    "display": "flex",
                    "flex": "1 0 auto",
                    "minWidth": "675px",
                  }
                }
              >
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  Agency
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  Sub Agency
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  Property Name
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  Civic Address
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "140 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "140px",
                    }
                  }
                >
                  Classification
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  Current Zoning Code
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  Potential Zoning Code
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "145 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "145px",
                      "textAlign": "left",
                      "width": "145px",
                    }
                  }
                >
                  Netbook Value
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "145 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "145px",
                      "textAlign": "left",
                      "width": "145px",
                    }
                  }
                >
                  Estimated Value
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "145 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "145px",
                      "textAlign": "left",
                      "width": "145px",
                    }
                  }
                >
                  Assessed Value
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "60 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "60px",
                    }
                  }
                >
                  Type
                </div>
              </div>
            </div>
            <div
              className="no-rows-message"
            >
              No rows to display
            </div>
          </div>
          <div
            className="table-toolbar"
          />
        </div>
      </div>
    </div>
    <h3>
      Documentation
    </h3>
    <h3>
      Approval
    </h3>
    <div
      className="form-row"
    >
      <div
        className="required form-group"
      >
        <div
          className="check-field"
        >
          <div
            className="form-check"
          >
            <input
              checked={true}
              className="form-check-input position-static"
              disabled={true}
              id="input-confirmation"
              name="confirmation"
              onChange={[Function]}
              required={true}
              type="checkbox"
              value={true}
            />
          </div>
          <span
            className="required"
          >
            *
          </span>
          <label
            className="form-label"
            htmlFor="input-confirmation"
          >
            I, Pims User, confirm by checking this box that I have received the approval 
  to request the property be submitted to the Enhanced Referral Program and marketed internally to other Ministry 
  and Broader Public Sector Agencies for 90 days before listing the property to be sold on the public commercial real estate market
          </label>
        </div>
      </div>
    </div>
    <h3>
      Enhanced Referral Process Exemption
      <svg
        className="tooltip-icon"
        fill="currentColor"
        height={14}
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        size={14}
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 512 512"
        width={14}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
        />
      </svg>
    </h3>
    <div
      className="ProjectExemptionRequestCheck form-row"
    >
      <div
        className="form-group"
      >
        <div
          className="check-field"
        >
          <div
            className="form-check"
          >
            <input
              checked={false}
              className="form-check-input position-static"
              disabled={true}
              id="input-exemptionRequested"
              name="exemptionRequested"
              onChange={[Function]}
              type="checkbox"
              value={false}
            />
          </div>
          <label
            className="form-label"
            htmlFor="input-exemptionRequested"
          >
            Apply for Enhanced Referral Process exemption
          </label>
        </div>
      </div>
    </div>
    <div
      className="ProjectNotes form-row"
    >
      <div
        className="col-md-10 form-group"
      >
        <label
          className="form-label"
          htmlFor="input-note"
        >
          Notes
        </label>
        <textarea
          className="col-md-5 form-control"
          disabled={true}
          id="input-note"
          name="note"
          onBlur={[Function]}
          onChange={[Function]}
          value="my notes"
        />
      </div>
    </div>
    <div
      className="ProjectNotes form-row"
    >
      <div
        className="col-md-10 form-group"
      >
        <label
          className="form-label"
          htmlFor="input-publicNote"
        >
          Shared Notes
          <svg
            className="tooltip-icon"
            fill="currentColor"
            height={14}
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            size={14}
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 512 512"
            width={14}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
            />
          </svg>
        </label>
        <textarea
          className="col-md-5 form-control"
          disabled={true}
          id="input-publicNote"
          name="publicNote"
          onBlur={[Function]}
          onChange={[Function]}
          value=""
        />
      </div>
    </div>
    <div
      style={
        Object {
          "textAlign": "right",
        }
      }
    />
    <div
      className="c2"
    >
      <button
        className="btn btn-warning"
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "marginLeft": 10,
          }
        }
        type="button"
      >
        Submit
      </button>
      <button
        className="btn btn-secondary"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        Save
      </button>
    </div>
  </form>
</div>
`;

exports[`Review Summary View renders submitted correctly 1`] = `
.c0 {
  text-align: center;
  margin-bottom: 1rem;
}

.c1 {
  padding-top: 1rem;
  padding-bottom: 1rem;
  font-family: 'BCSans',Fallback,sans-serif;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

<div
  className="ProjectSummaryView container-fluid"
>
  <div
    className="c0 [object Object]-status"
  >
    <h5
      className="c1"
    >
      Submitted
    </h5>
    <svg
      fill="currentColor"
      height={64}
      size={64}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": "#2E8540",
        }
      }
      viewBox="0 0 512 512"
      width={64}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
      />
    </svg>
    <h5
      className="c1"
    >
      In Review
    </h5>
  </div>
  <form
    className=""
  >
    <div
      className="ProjectDraftForm container-fluid"
    >
      <div
        className="form-row"
      >
        <h3
          className="col-md-8"
        >
          Review
        </h3>
        <span
          className="col-md-4"
        />
      </div>
      <div
        className="col-md-10 form-row"
      >
        <label
          className="col-md-2 form-label"
        >
          Project No.
        </label>
        <div
          className="col-md-2 form-group"
        >
          <input
            className="form-control"
            disabled={true}
            id="input-projectNumber"
            name="projectNumber"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="SPP-XXXXXX"
            value="test-01"
          />
        </div>
      </div>
      <div
        className="form-row"
      >
        <div
          className="required col-md-10 form-group"
        >
          <label
            className="form-label"
            htmlFor="input-name"
          >
            Name
            <span
              className="required"
            >
              *
            </span>
          </label>
          <input
            className="col-md-5 form-control"
            disabled={true}
            id="input-name"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            required={true}
            value="my project"
          />
        </div>
      </div>
      <div
        className="form-row"
      >
        <div
          className="col-md-10 form-group"
        >
          <label
            className="form-label"
            htmlFor="input-description"
          >
            Description
          </label>
          <textarea
            className="col-md-5 form-control"
            disabled={true}
            id="input-description"
            name="description"
            onBlur={[Function]}
            onChange={[Function]}
            value="my project description"
          />
        </div>
      </div>
    </div>
    <div
      className="UpdateInfoForm container-fluid"
    >
      <div
        className="form-row"
      >
        <label
          className="form-label col-form-label col-md-2"
        >
          Assign Tier 
          <span
            className="required"
          >
            *
          </span>
          <svg
            className="tooltip-icon"
            fill="currentColor"
            height={14}
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            size={14}
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 512 512"
            width={14}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
            />
          </svg>
        </label>
        <div
          className="col-md-2 form-group"
        >
          <select
            className="form-select form-control"
            disabled={true}
            id="input-tierLevelId"
            name="tierLevelId"
            onBlur={[Function]}
            onChange={[Function]}
            value={1}
          >
            <option
              value=""
            >
              Must Select One
            </option>
          </select>
        </div>
      </div>
      <div
        className="form-row"
        style={
          Object {
            "alignItems": "unset",
          }
        }
      >
        <h3
          className="col-md-8"
        >
          Project Totals
        </h3>
      </div>
      <div
        className="row"
      >
        <div
          className="col-md-4"
        >
          <div
            className="row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Net Book Value 
              <span
                className="required"
              >
                *
              </span>
            </label>
            <div
              className="fast-currency-input form-group"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control"
                  name="netBook"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="$0"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            className="row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Estimated Market Value 
              <span
                className="required"
              >
                *
              </span>
            </label>
            <div
              className="fast-currency-input form-group"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control"
                  name="estimated"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="$0"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-md-4"
        >
          <div
            className="row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Assessed Value 
              <span
                className="required"
              >
                *
              </span>
            </label>
            <div
              className="fast-currency-input form-group"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control"
                  name="assessed"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="$0"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            className="row"
          >
            <label
              className="form-label col-form-label col-md-4"
            >
              Appraised Value
            </label>
            <div
              className="fast-currency-input form-group"
            >
              <div
                className="input-tooltip-wrapper"
              >
                <input
                  className="form-control"
                  name="appraised"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="$0"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="form-row"
      >
        <h6
          className="col-md-12"
          style={
            Object {
              "margin": "1rem 0",
            }
          }
        >
          Please make any necessary updates to the valuation information and the classification
        </h6>
        <h2
          className="col-md-5"
        >
          Properties in the Project
        </h2>
      </div>
      <div
        className="container-fluid"
      >
        <div
          className="ScrollContainer"
        >
          <div
            className="table"
            role="table"
            style={
              Object {
                "minWidth": undefined,
              }
            }
          >
            <div
              className="thead thead-light"
            >
              <div
                className="tr"
                role="row"
                style={
                  Object {
                    "display": "flex",
                    "flex": "1 0 auto",
                    "minWidth": "675px",
                  }
                }
              >
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  Agency
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  Sub Agency
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  Property Name
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  Civic Address
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "140 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "140px",
                    }
                  }
                >
                  Classification
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  Current Zoning Code
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "100 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "100px",
                    }
                  }
                >
                  Potential Zoning Code
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "145 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "145px",
                      "textAlign": "left",
                      "width": "145px",
                    }
                  }
                >
                  Netbook Value
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "145 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "145px",
                      "textAlign": "left",
                      "width": "145px",
                    }
                  }
                >
                  Estimated Value
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "145 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "145px",
                      "textAlign": "left",
                      "width": "145px",
                    }
                  }
                >
                  Assessed Value
                </div>
                <div
                  className="th"
                  colSpan={1}
                  onClick={[Function]}
                  role="columnheader"
                  style={
                    Object {
                      "alignItems": "center",
                      "boxSizing": "border-box",
                      "display": "flex",
                      "flex": "60 0 auto",
                      "justifyContent": "flex-start",
                      "minWidth": "30px",
                      "textAlign": "left",
                      "width": "60px",
                    }
                  }
                >
                  Type
                </div>
              </div>
            </div>
            <div
              className="no-rows-message"
            >
              No rows to display
            </div>
          </div>
          <div
            className="table-toolbar"
          />
        </div>
      </div>
    </div>
    <h3>
      Documentation
    </h3>
    <h3>
      Approval
    </h3>
    <div
      className="form-row"
    >
      <div
        className="required form-group"
      >
        <div
          className="check-field"
        >
          <div
            className="form-check"
          >
            <input
              checked={true}
              className="form-check-input position-static"
              disabled={true}
              id="input-confirmation"
              name="confirmation"
              onChange={[Function]}
              required={true}
              type="checkbox"
              value={true}
            />
          </div>
          <span
            className="required"
          >
            *
          </span>
          <label
            className="form-label"
            htmlFor="input-confirmation"
          >
            I, Pims User, confirm by checking this box that I have received the approval 
  to request the property be submitted to the Enhanced Referral Program and marketed internally to other Ministry 
  and Broader Public Sector Agencies for 90 days before listing the property to be sold on the public commercial real estate market
          </label>
        </div>
      </div>
    </div>
    <h3>
      Enhanced Referral Process Exemption
      <svg
        className="tooltip-icon"
        fill="currentColor"
        height={14}
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        size={14}
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 512 512"
        width={14}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
        />
      </svg>
    </h3>
    <div
      className="ProjectExemptionRequestCheck form-row"
    >
      <div
        className="form-group"
      >
        <div
          className="check-field"
        >
          <div
            className="form-check"
          >
            <input
              checked={false}
              className="form-check-input position-static"
              disabled={true}
              id="input-exemptionRequested"
              name="exemptionRequested"
              onChange={[Function]}
              type="checkbox"
              value={false}
            />
          </div>
          <label
            className="form-label"
            htmlFor="input-exemptionRequested"
          >
            Apply for Enhanced Referral Process exemption
          </label>
        </div>
      </div>
    </div>
    <div
      className="ProjectNotes form-row"
    >
      <div
        className="col-md-10 form-group"
      >
        <label
          className="form-label"
          htmlFor="input-note"
        >
          Notes
        </label>
        <textarea
          className="col-md-5 form-control"
          disabled={true}
          id="input-note"
          name="note"
          onBlur={[Function]}
          onChange={[Function]}
          value="my notes"
        />
      </div>
    </div>
    <div
      className="ProjectNotes form-row"
    >
      <div
        className="col-md-10 form-group"
      >
        <label
          className="form-label"
          htmlFor="input-publicNote"
        >
          Shared Notes
          <svg
            className="tooltip-icon"
            fill="currentColor"
            height={14}
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            size={14}
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 512 512"
            width={14}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
            />
          </svg>
        </label>
        <textarea
          className="col-md-5 form-control"
          disabled={true}
          id="input-publicNote"
          name="publicNote"
          onBlur={[Function]}
          onChange={[Function]}
          value=""
        />
      </div>
    </div>
    <div
      style={
        Object {
          "textAlign": "right",
        }
      }
    />
    <div
      className="c2"
    >
      <button
        className="btn btn-warning"
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "marginLeft": 10,
          }
        }
        type="button"
      >
        Submit
      </button>
      <button
        className="btn btn-secondary"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        Save
      </button>
    </div>
  </form>
</div>
`;
